# rag-practice

./: main.py  pyproject.toml  test.py
model-test/: ollama.ipynb
pages/: 01_PDF.py
prompts/: general.yaml  pdf-rag.yaml  sns.yaml
