[tool.poetry]
name = "rag-practice"
version = "0.1.0"
description = ""
authors = ["i-Veni-Vidi-Vici <biuld1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.25"
openai = "^1.77.0"
faiss-cpu = "^1.11.0"
tiktoken = "^0.9.0"
python-dotenv = "^1.1.0"
langchain-openai = "^0.3.16"
streamlit = "^1.45.0"
langchain-community = "^0.3.23"
pymupdf = "^1.25.5"
langchain-ollama = "^0.3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
